# polybets-monorepo

./: .gitignore  README.MD  compose.yaml  deploy.sh  package.json  turbo.json
.cursor/rules/: hardhat.mdc  package-managers.mdc  typescript.mdc
.turbo/cache/: 1adde55bc04ff393-meta.json  a428b00bc9146500-meta.json  a428b00bc9146500.tar.zst  c8bf859de73923ff-meta.json  c8bf859de73923ff.tar.zst  ca96c27e65d8a009-meta.json  ca96c27e65d8a009.tar.zst  db90e95225c921e9-meta.json  db90e95225c921e9.tar.zst  ee8e90ae0e154230-meta.json  ee8e90ae0e154230.tar.zst
apps/agent/: .env.example  README.md  my_first_agent.py  polybet_agent.py  polybet_agent_v2.py  polybet_agent_v3.py
apps/arbitrage-rofl/: README.md  package.json
apps/bet-router-rofl/: Dockerfile  README.MD  README_DEPLOY.md  README_SCRIPTS.md  client.py  compose.yaml  deploy-oasis.sh  deploy.sh  health-check.sh  install-oasis-cli.sh  main.py  monitor-oasis.sh  pyproject.toml  requirements.txt  rofl.yaml  setup.sh  test_compose.sh
apps/bet-router-rofl/bet_execution/: bet_executor.py  betting_example.py  get_lmsr_data.py  lmsr_calculator.py  optimal_betting.py
apps/bet-router-rofl/contracts/: PolyBet.json
apps/bet-router-rofl/handlers/: __init__.py  bet_slip_created_handler.py
apps/knowledge-graph/: CHANGELOG.md  README.md  check-entity-relations.ts  check-exports.ts  check-other-polybets-entity.ts  check-other-space.ts  check-related-space.ts  check-space-entity.ts  create-entities-simple.ts  create-entities-working.ts  (+29 more)
contracts/: README.md  deploy-full.sh  hardhat.config.cjs  hardhat.config.ts  package.json
(+127 files in other folders)
